good progress on chapter 3

--- a/monografia.tex
+++ b/monografia.tex
@@ -12,7 +12,10 @@
 \usepackage{pdfpages}% incluir PDFs, usado no apêndice
 \usepackage{multirow}
 \usepackage{colortbl}
-\usepackage{booktabs}  
+\usepackage{booktabs}
+\usepackage{dirtree} 
+\usepackage{listings}
+\usepackage{changepage} 
 
 \newcommand\Tstrut{\rule{0pt}{3ex}}         % = `top' strut
 \newcommand\Bstrut{\rule[-1.2ex]{0pt}{0pt}}   % = `bottom' strut
@@ -43,7 +46,7 @@
     \capitulo{1_Introducao}{Introdução}%
     \capitulo{2_referencial_teorico}{Referencial Teórico}%
     \capitulo{3_HMR_sim}{O simulador HMR Sim}%
-    \capitulo{4_resultados}{Resultados e Conclusões}%
+    % \capitulo{4_resultados}{Resultados e Conclusões}%
 
     % \apendice{Apendice_Fichamento}{Fichamento de Artigo Científico}%
     % \anexo{Anexo1}{Documentação Original \unbcic\ (parcial)}%
