--- a/tex/1_Introducao.tex
+++ b/tex/1_Introducao.tex
@@ -18,6 +18,6 @@ O Laboratório de Engenharia de Software (LES) da Universidade de Brasília (UnB
 
 Nesse cenário, a proposta deste projeto é fornecer uma ferramenta direcionada para simulação de sistemas multi-robôs auto-adaptativo com baixo nível de detalhamento físico. Esta ferramenta será usada na avaliação e comparar algoritmos de distribuição de tarefas entre agentes de um SMR. Também pode ser usado para prototipação das características de cada agente do SMR, bem como validação de requisitos do time de robôs de algum sistema.
 
-O capítulo \ref{chapter:referencial} comenta conceitos que foram relevantes na construção do simulador, e comenta um pouco mais sobre os outros simuladores que foram pesquisados na literatura. O capítulo \ref{3_HMR_sim} apresenta o simulador que foi criado nesse projeto, HMR Sim, bem como sua arquitetura, decisões de projeto importantes e características principais. O capítulo \ref{chapter:results} detalha alguns resultados obtidos com o HMR Sim, bem como conclusões e trabalhos futuros.
+O capítulo \ref{chapter:referencial} comenta conceitos que foram relevantes na construção do simulador, e comenta um pouco mais sobre os outros simuladores que foram pesquisados na literatura. O capítulo \ref{3_HMR_sim} apresenta o simulador que foi criado nesse projeto, HMR Sim, sua arquitetura, decisões de projeto importantes e características principais, além de detalhar alguns resultados obtidos.
 
 
