progress on chapter 3. Missing 2 sections

--- a/monografia.tex
+++ b/monografia.tex
@@ -16,6 +16,7 @@
 \usepackage{dirtree} 
 \usepackage{listings}
 \usepackage{changepage} 
+\usepackage{subcaption}
 
 \newcommand\Tstrut{\rule{0pt}{3ex}}         % = `top' strut
 \newcommand\Bstrut{\rule[-1.2ex]{0pt}{0pt}}   % = `bottom' strut
